syntax = "proto3";

package api.protocol;

option go_package = "github.com/zhihanii/im-pusher/api/protocol;protocol";

message Message {
  uint32 version = 1;
  uint32 magic_num = 2;
  uint32 operation = 3; //区分消息类型
  uint32 sequence = 4;
  bytes data = 5; //消息内容  
}

message TransMessage { //只用于内部消息传输
  uint32 type = 1; //消息的发送类型: Channel Room Broadcast
  uint32 priority = 2;
  string server = 3;
  string room = 4;
  repeated string keys = 5;
  uint32 operation = 6;
  uint32 sequence = 7;
  bytes data = 8;
}

message ChatMessage {
  uint64 conversation_id = 1;
  uint64 from = 2;
  uint64 to = 3;
  bytes content = 4;
}

message GroupChatMessage {
  uint64 group_id = 1;
  uint64 sender_id = 2;
  bytes content = 3;
}

message ServiceMessage { //可以根据业务特点定制具体的消息格式
  bytes content = 1;
}
